# web3_PRO

./: Anchor.toml  README.md  jsconfig.json  package-lock.json  package.json  tsconfig.json
app/web3/: package-lock.json  package.json
app/web3/public/: index.html
app/web3/src/: App.js  index.css  index.js
app/web3/src/components/: contract_function.js  query_utils.js  topbar.js
app/web3/src/components/common/code/: query.js
app/web3/src/components/common/style/: query.css
app/web3/src/components/global/: Footer.js  Navbar.js
app/web3/src/layouts/: MainLayout.js
app/web3/src/pages/: About.js  Home.css  Home.js
app/web3/src/pages/code/: Homepage.js  Searchpage.js
app/web3/src/pages/style/: Homepage.css
app/web3/src/styles/: global.css
app/web3/src/styles/components/: Navbar.css  footer.css
app/web3/src/utils/: aboutquery.js
programs/: value_policy.md
programs/web3-pro/: Cargo.toml
programs/web3-pro/src/: constant.rs  cpi.rs  error.rs  lib.rs  processor.rs  utils.rs
programs/web3-pro/src/processor/: create.rs  delete.rs  query.rs  transfer.rs
programs/web3_register/: Cargo.toml
programs/web3_register/src/: constant.rs  cpi.rs  lib.rs  processor.rs  utils.rs
programs/web3_register/src/processor/: create.rs  delete.rs
tests/: my_contract.test.js  test.ts  web3-pro.ts
