[package]
name = "web3-pro"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "web3_pro"
proc-macro = true 

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
Debug = []


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
unicode-segmentation = "1.12.0"
spl-token = "7.0.0"

