[package]
name = "web3register"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "web3register"


[features]
default = ["Debug"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
Debug = []


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
unicode-segmentation = "1.12.0"
thiserror = "2.0.12"
num-traits = "0.2.19"
num-derive = "0.4.2"
left_utils = "0.1.0"

[dev-dependencies]
anchor-lang = { version = "0.30.1"}



