[package]
name = "web3register"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "web3register"


[features]
default = ["Debug", "devnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
Debug = []
devnet = []


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
unicode-segmentation = "1.12.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
lazy_static = "1.5.0"
web3nameservice = { path = "/home/f/myproject/web3_name_service/programs/web3_name_service", features = ["cpi"] }







